# njvm

./: .gitignore  README.md  a.out  constants.h  instructions.h  macro.h  njvm  njvm.c  njvm.out  prog1.asm  program1.h
.ipynb_checkpoints/: README-checkpoint.md
Aufgabe_2/: nja
Aufgabe_3/: nja
Aufgabe_5/: nja  njc
Aufgabe_6/: nja  njc  njvm
Aufgabe_6/ggt/: ggt.asm  ggt.nja
Aufgabe_7/: nja  njc  njvm
Aufgabe_7/test/: test.asm  test.nj
Aufgabe_7/twodim/: twodim.asm
Hausuebung_1/gnss19/: CMakeLists.txt  KSP-HU1.TEAM  constants.h  macro.h  njvm  njvm.c  njvm.h
Selfmade_Tests_Hue_1/: Selbstgeschriebene_Tests_REDME.txt
Selfmade_Tests_Hue_1/Assembler/: Test_1.asm  Test_2.asm  Test_3.asm
vm/: CMakeLists.txt  constants.h  debug.txt  debugger.c  debugger.h  instructions.h  macro.h  makefile  mknjvm  njvm  njvm.c  njvm.h
vm/debugger/: debugger.c  debugger.h
